// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/CloseButton should render a close button 1`] = `
".a {
  border-top-left-radius: 0.375rem;
}
.b {
  border-top-right-radius: 0.375rem;
}
.c {
  border-bottom-right-radius: 0.375rem;
}
.d {
  border-bottom-left-radius: 0.375rem;
}
.e {
  background-color: transparent;
}
.f {
  background-image: url(test-file-stub);
}
.g {
  background-position-x: center;
}
.h {
  background-origin: padding-box;
}
.i {
  background-clip: border-box;
}
.j {
  background-position-y: 1em;
}
.k {
  background-repeat: no-repeat;
}
.l {
  background-size: auto;
}
.m {
  box-sizing: content-box;
}
.n {
  color: #000;
}
.o {
  height: 1em;
}
.p {
  opacity: 0.5;
}
.q {
  padding-top: 0.25em;
}
.r {
  padding-bottom: 0.25em;
}
.s {
  padding-left: 0.25em;
}
.t {
  padding-right: 0.25em;
}
.u {
  width: 1em;
}
.y:disabled {
  opacity: 0.25;
}
.z:disabled {
  pointer-events: none;
}
.ab:disabled {
  user-select: none;
}
.ac {
  border-top-width: 0;
}
.ae {
  border-right-width: 0;
}
.af {
  border-bottom-width: 0;
}
.ag {
  border-left-width: 0;
}
.ah {
  border-top-color: rgb(0, 0, 0);
}
.ai {
  border-right-color: rgb(0, 0, 0);
}
.aj {
  border-bottom-color: rgb(0, 0, 0);
}
.ak {
  border-left-color: rgb(0, 0, 0);
}
.v:focus {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.w:focus {
  opacity: 1;
}
.x:focus {
  outline-width: 0;
}


<button
  data-testid="close-button"
  class="a ab ac ae af ag ah ai aj ak b c d e f g h i j k l m n o p q r s t u v w x y z close-button"
  aria-label="Close"
></button
>;
"
`;

exports[`components/CloseButton should render a close button for a modal 1`] = `
".a {
  border-top-left-radius: 0.375rem;
}
.b {
  border-top-right-radius: 0.375rem;
}
.c {
  border-bottom-right-radius: 0.375rem;
}
.d {
  border-bottom-left-radius: 0.375rem;
}
.e {
  background-color: transparent;
}
.f {
  background-image: url(test-file-stub);
}
.g {
  background-position-x: center;
}
.h {
  background-origin: padding-box;
}
.i {
  background-clip: border-box;
}
.j {
  background-position-y: 1em;
}
.k {
  background-repeat: no-repeat;
}
.l {
  background-size: auto;
}
.m {
  box-sizing: content-box;
}
.n {
  color: #000;
}
.o {
  height: 1em;
}
.p {
  opacity: 0.5;
}
.q {
  padding-top: 0.25em;
}
.r {
  padding-bottom: 0.25em;
}
.s {
  padding-left: 0.25em;
}
.t {
  padding-right: 0.25em;
}
.u {
  width: 1em;
}
.y:disabled {
  opacity: 0.25;
}
.z:disabled {
  pointer-events: none;
}
.ab:disabled {
  user-select: none;
}
.ac {
  margin-top: -0.5rem;
}
.ae {
  margin-right: -0.5rem;
}
.af {
  margin-bottom: -0.5rem;
}
.ag {
  margin-left: auto;
}
.ah {
  border-top-width: 0;
}
.ai {
  border-right-width: 0;
}
.aj {
  border-bottom-width: 0;
}
.ak {
  border-left-width: 0;
}
.al {
  border-top-color: rgb(0, 0, 0);
}
.am {
  border-right-color: rgb(0, 0, 0);
}
.an {
  border-bottom-color: rgb(0, 0, 0);
}
.ao {
  border-left-color: rgb(0, 0, 0);
}
.v:focus {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.w:focus {
  opacity: 1;
}
.x:focus {
  outline-width: 0;
}


<button
  data-testid="close-button"
  class="a ab ac ae af ag ah ai aj ak al am an ao b c d e f g h i j k l m n o p q r s t u v w x y z close-button"
  aria-label="Close"
></button
>;
"
`;

exports[`components/CloseButton should render a close button for an alert 1`] = `
".a {
  border-top-left-radius: 0.375rem;
}
.b {
  border-top-right-radius: 0.375rem;
}
.c {
  border-bottom-right-radius: 0.375rem;
}
.d {
  border-bottom-left-radius: 0.375rem;
}
.e {
  background-color: transparent;
}
.f {
  background-image: url(test-file-stub);
}
.g {
  background-position-x: center;
}
.h {
  background-origin: padding-box;
}
.i {
  background-clip: border-box;
}
.j {
  background-position-y: 1em;
}
.k {
  background-repeat: no-repeat;
}
.l {
  background-size: auto;
}
.m {
  box-sizing: content-box;
}
.n {
  color: #000;
}
.o {
  height: 1em;
}
.p {
  opacity: 0.5;
}
.q {
  padding-top: 1.25rem;
}
.r {
  padding-bottom: 1.25rem;
}
.s {
  padding-left: 1rem;
}
.t {
  padding-right: 1rem;
}
.u {
  width: 1em;
}
.y:disabled {
  opacity: 0.25;
}
.z:disabled {
  pointer-events: none;
}
.ab:disabled {
  user-select: none;
}
.ac {
  position: absolute;
}
.ae {
  right: 0;
}
.af {
  top: 0;
}
.ag {
  z-index: 2;
}
.ah {
  border-top-width: 0;
}
.ai {
  border-right-width: 0;
}
.aj {
  border-bottom-width: 0;
}
.ak {
  border-left-width: 0;
}
.al {
  border-top-color: rgb(0, 0, 0);
}
.am {
  border-right-color: rgb(0, 0, 0);
}
.an {
  border-bottom-color: rgb(0, 0, 0);
}
.ao {
  border-left-color: rgb(0, 0, 0);
}
.v:focus {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.w:focus {
  opacity: 1;
}
.x:focus {
  outline-width: 0;
}


<button
  data-testid="close-button"
  class="a ab ac ae af ag ah ai aj ak al am an ao b c d e f g h i j k l m n o p q r s t u v w x y z close-button"
  aria-label="Close"
></button
>;
"
`;

exports[`components/CloseButton should render a close button with a className 1`] = `
".a {
  border-top-left-radius: 0.375rem;
}
.b {
  border-top-right-radius: 0.375rem;
}
.c {
  border-bottom-right-radius: 0.375rem;
}
.d {
  border-bottom-left-radius: 0.375rem;
}
.e {
  background-color: transparent;
}
.f {
  background-image: url(test-file-stub);
}
.g {
  background-position-x: center;
}
.h {
  background-origin: padding-box;
}
.i {
  background-clip: border-box;
}
.j {
  background-position-y: 1em;
}
.k {
  background-repeat: no-repeat;
}
.l {
  background-size: auto;
}
.m {
  box-sizing: content-box;
}
.n {
  color: #000;
}
.o {
  height: 1em;
}
.p {
  opacity: 0.5;
}
.q {
  padding-top: 0.25em;
}
.r {
  padding-bottom: 0.25em;
}
.s {
  padding-left: 0.25em;
}
.t {
  padding-right: 0.25em;
}
.u {
  width: 1em;
}
.y:disabled {
  opacity: 0.25;
}
.z:disabled {
  pointer-events: none;
}
.ab:disabled {
  user-select: none;
}
.ac {
  border-top-width: 0;
}
.ae {
  border-right-width: 0;
}
.af {
  border-bottom-width: 0;
}
.ag {
  border-left-width: 0;
}
.ah {
  border-top-color: rgb(0, 0, 0);
}
.ai {
  border-right-color: rgb(0, 0, 0);
}
.aj {
  border-bottom-color: rgb(0, 0, 0);
}
.ak {
  border-left-color: rgb(0, 0, 0);
}
.v:focus {
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}
.w:focus {
  opacity: 1;
}
.x:focus {
  outline-width: 0;
}


<button
  data-testid="close-button"
  class="a ab ac ae af ag ah ai aj ak b c d e f g h i j k l m n o p q r s t u v w x y z close-button close"
  aria-label="Close"
></button
>;
"
`;
